static/css/local.css
/* @override http://localhost:8000/static/css/local.css */

/* A font by Jos Buivenga (exljbris) -> www.exljbris.com */
/*@font-face {
	font-family: 'MuseoSans500';
	src: url('MuseoSans_500.eot');
	src: local('Museo Sans 500'), local('MuseoSans-500'), url('MuseoSans_500.woff') format('woff'), url('MuseoSans_500.otf') format('opentype'), url('MuseoSans_500.svg#MuseoSans-500') format('svg');
}*/

/* @group General */

html, body {
	background-color: #c2efff;
	font-family: "museo-sans-1","museo-sans-2", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	height: 100%;
	width: 100%;
	color: #586c78;
	font-weight: 300;
	font-size: 100%;
}

h3 {
	font-weight: 300;
	color: #157DBC;
	text-shadow: #fff 0 1px 0;
	font-size: 1.5em;
	margin-bottom: 0.7em;
}

h4, legend {
	font-weight: normal;
	color: #5f99bc;
	text-shadow: #fff 0 1px 0;
	font-size: 1.25em;
	margin-bottom: 0.7em;
}

p {
	color: #586c78;
	font-size: 1em;
	line-height: 1.5em;
	margin-bottom: 1.0em;
}

ul {
	color: #586c78;
	font-size: 16px;
	line-height: 1.5em;
	margin-bottom: 1.0em;
	list-style-type: square;
	list-style-position: outside;
}

a {
	color: #0599ee;
	text-decoration: none;
}

a:visited {
	color: #0483cc;
}

a:hover {
	text-decoration: underline;
	text-shadow: #fff 0 1px 0;
	color: #be4518;
}

/* @end */

/* @group Masthead */

#masthead_wrap {
	height: 180px;
	overflow: hidden;
	width: 100%;
	background: url(../img/masthead_bg.png) repeat-x left 64px;
	margin: 0;
	padding: 0;
	position: relative;
}

#masthead {
	width: 960px;
	height: 180px;
	overflow: hidden;
	margin: 0 auto;
	padding: 0;
	position: relative;
}

#masthead a#pony_home {
	float: right;
}

#masthead h1 {
	margin-top: 64px;
	height: 99px;
	width: 479px;
	float: right;
}

#masthead h1 a {
	display: block;
	text-indent: -9999px;
	width: 479px;
	height: 99px;
	background: url(../img/masthead_berlin_2010.png) no-repeat right center;
}

/* @end */

/* @group Primary Nav */

nav#primarynav {
	margin: 10px 0 30px 10px;
	padding-bottom: 10px;
	border-bottom: 1px solid #b2e3f5;
}

nav#primarynav ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

nav#primarynav ul li {
	list-style: none;
	display: block;
	float: left;
	margin: 0;
	padding: 0;
	width: 143px;
}

nav#primarynav a {
	display: block;
	text-decoration: none;
	padding-bottom: 10px;
	
}

nav#primarynav h1 {
	font-weight: 300;
	font-size: 22px;
	color: #6b8893;
	margin-bottom: 0.5em;
	padding-left: 34px;
}

nav#primarynav a:hover h1 {
	background-position: left center;
	background-repeat: no-repeat;
	text-shadow: #fff 0 1px 0;
}

nav#primarynav a.active h1 {
	background-position: left center;
	background-repeat: no-repeat;
	text-shadow: #fff 0 2px 0;
}

nav#primarynav a.active h1 {
	font-weight: 700;
	color:  #555;
}

nav#primarynav a:hover h2 {
	text-shadow: none;
	color: #6b8893;
}

nav#primarynav li.inactive h1 {
	color: #6b8893;
}

nav#primarynav li#nav_talks a:hover h1,
nav#primarynav li#nav_talks a.active h1 {
	background-image: url(../img/nav_talks.png);
}

nav#primarynav li#nav_tickets a:hover h1,
nav#primarynav li#nav_tickets a.active h1 {
	background-image: url(../img/nav_tickets.png);
}

nav#primarynav li#nav_venue a:hover h1,
nav#primarynav li#nav_venue a.active h1 {
	background-image: url(../img/nav_venue.png);
}

nav#primarynav li#nav_blog a:hover h1,
nav#primarynav li#nav_blog a.active h1 {
	background-image: url(../img/nav_blog.png);
	background-position: 10px center;
}

nav#primarynav li#dates {
	width: 235px;
}

nav#primarynav li#dates h1 {
	text-indent: -9999px;
	display: block;
	width: 235px;
	min-height: 70px;
	background: url(../img/calendar.png) no-repeat center top;
	padding: 0;
}


nav#primarynav h2 {
	font-family: "sorts-mill-goudy-1","sorts-mill-goudy-2", Georgia, "Times New Roman", Times, serif;
	color: #92bac8;
	font-weight: normal;
	font-style: italic;
	line-height: 1em;
	padding-left: 34px;
}

/* @end */

/* @group Tagline */

#tagline_section {
	margin-top: 20px;
	margin-bottom: 20px;
}

#tagline_section h1 {
	padding-left: 10px;
	margin-bottom: 10px;
	font-weight: 300;
	font-size: 14px;
	color: #7ea1ad;
	text-transform: uppercase;
	letter-spacing: 0.2em;
	text-shadow: #fff 0 1px 0;
}

#tagline_wrap {
	width: 960px;
	height: 113px;
	overflow: visible;
	margin: 0 auto;
	padding: 0;
	position: relative;
	background: url(../img/taglines.png) no-repeat center top;
}

.tagline_gravatar {
	display: block;
	background: #f5f5f5;
	border: 1px solid #aaa;
	padding: 4px;
	position: absolute;
	top: 20px;
	left: -25px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	-webkit-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
	-moz-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
	-webkit-transform: translate(0, 5px) rotate(-15deg);
	-moz-transform: translate(0, 5px) rotate(-15deg);

}

.tagline_text {
	font-size: 34px;
	text-shadow: #fff 0 2px 0;
	position: absolute;
	line-height: 85px;
	top: 8px;
	left: 50px;
	width: 900px;
	color: #586c78;
	overflow: hidden;
}

/* @end */

/* @group Home */

section.home_split_info {
	margin-bottom: 1em;
}

section.home_split_info h1 {
	font-weight: 500;
	font-size: 24px;
	margin-bottom: 0.5em;
	text-shadow: #fff 0 1px 0;
	padding-left: 34px;
	padding-right: 15px;
	background-position: left center;
	background-repeat: no-repeat;
}

section.home_split_info#home_elevator_statement h1 {
	background-image: url(../img/nav_talks.png);
}

section.home_split_info#home_sponsors h1 {
	background-image: url(../img/heart_icon.png);
}

section.home_split_info#home_tickets h1 {
	background-image: url(../img/nav_tickets.png);
}


section.home_split_info p {
	font-size: 16px;
	padding-left: 34px;
	padding-right: 15px;
}

section.home_split_info ul {
	margin-left: 34px;
	padding-right: 15px;
}

ul#home_tickets {
	font-size: 20px;
	float: left;
	border-right: 1px solid #b2e3f5;
	margin-right: 20px;
}

ul#home_tickets strong {
	font-weight: 900;
	letter-spacing: 1px;
}

p#register_now {
	font-size: 30px;
	margin-top: 39px;
}

p#register_now a {
	padding: 5px;
	color: #157dbc;
	font-weight: 500;
	text-shadow: #fff 0 2px 0;
}

p#register_now a:hover {
	text-decoration: none;
	color: #fff;
	text-shadow: #35800f 0 2px 0;
	background-color: #86b831;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}

#home_latest_blog>h1 {
	font-weight: 500;
	font-size: 24px;
	margin-bottom: 0.5em;
	text-shadow: #fff 0 1px 0;
	float:left;
	margin-right: 1em;
	padding-left: 34px;
	padding-right: 15px;
	background: url(../img/nav_blog.png) no-repeat 7px center;
}

#home_latest_blog>ul {
	list-style: none;
	margin: 0;
	padding: 0;
	padding-top: 2px;
}

#home_latest_blog>ul>li {
	list-style: none;
	display: block;
	float: left;
	margin: 0 1em 0 0;
	padding: 0;
}

#home_latest_blog>ul>li>a {
	text-transform: uppercase;
	font-size: 12px;
	letter-spacing: 2px
}

#home_latest_blog article {
	clear: both;
	padding-left: 34px;
	padding-right: 15px;
}

#home_latest_blog article h1 {
	clear: both;
	font-weight: 500;
	font-size: 20px;
	margin-bottom: 0.4em;
	text-shadow: #fff 0 1px 0;
}

#home_latest_blog article h2 {
	font-weight: 300;
	font-size: 12px;
	color: #7ea1ad;
	text-transform: uppercase;
	text-shadow: #fff 0 1px 0;
	margin-bottom: 10px;
}


/* @end */


#formerror, .errorlist {
	color: #cc0404;
	text-shadow: #fff 0 2px 0;
	font-size: 1.25em;
	margin: 1em 0 0.5em;
	clear: both;
}

ul.errorlist {
	margin: 0;
	list-style-type: none;
	font-size: 1em;
}

fieldset, div.row {
	display: block;
	position: relative;
	margin: 0;
	padding: 0;
	/*margin: 0 0 10px 0;*/
	clear: both;
}


#fieldset_email {
	height: 64px;
	width: 490px;
	margin: 0;
	padding: 0;
	float: left;
}

fieldset legend {
	margin: 0;
	padding: 0;
}

label {
	text-transform: uppercase;
	display: block;
	font-size: 12px;
	line-height: 20px;
	height: 20px;
	padding: 0;
	margin: 0;
	color: #909ca2;
	font-weight: normal;
	text-shadow: #fff 1px 1px 0;
}

label.infield {
	position: absolute;
	left: 5px;
	bottom: 15px;
	font-size: 11px;
	text-shadow: #fff -1px -1px 0;
}

input, textarea {
	font-size: 1em;
	margin: 0;
	display: block;
	float: left;
	padding: 4px;
	border: 1px solid #b3e5f8;
	font-weight: normal;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	vertical-align: middle;
	color: #586c78;
	background: #d3f3ff url(../img/input_bg_inactive.png) repeat-x left bottom;
}

#form-talk-submit input, #form-talk-submit textarea {
	width: 530px;
}

#form-talk-submit input[type=checkbox] {
    width: 20px;
    margin: 2px;
    float: left;
}

#form-attendees-register input, #form-attendees-register textarea {
	width: 530px;
}

input:focus, textarea:focus {
	background: #fff url(../img/input_bg_white.png) repeat-x left bottom;
}

#fieldset_email input {
	font-size: 30px;
	height: 40px;
	line-height: 40px;
	width: 460px;
}

#id_abstract {
	height: 100px;
}

#id_description {
	height: 250px;
}

p.helptext {
	font-size: 75%;
	opacity: 0.6;
}

#signupbutton {
	width: 130px;
	height: 45px;
	background: url(../img/sign_up.png) no-repeat center center;
	cursor: pointer;
	text-indent: -9999px;
	margin-top: 2px;
}

#signupbutton:hover {
	background-image: url(../img/sign_up_hover.png);
}

#subscribe {
	position: relative;
	overflow: visible;
}

.already_subscribed {
	padding-left: 65px;
	padding-top: 10px;
	background: url(../img/subscribed.png) no-repeat -10px -10px;
	overflow: visible;
	min-height: 80px;
}

#subscribe h1 {	
	font-weight: 300;
	font-size: 14px;
	color: #7ea1ad;
	text-transform: uppercase;
	letter-spacing: 0.2em;
	text-shadow: #fff 0 1px 0;
	margin-bottom: 10px;
}

#subscribe h2 {
	font-weight: 300;
	color: #7ea1ad;
	font-size: 18px;
	margin-bottom: 10px;
}

#subscribe h3 {
	font-weight: 300;
	color: #7ea1ad;
	text-shadow: none;
	/*text-shadow: #fff 0 1px 0;*/
	font-size: 14px;
	margin-top: 10px;
	margin-bottom: 10px;
}

#footer {
	width: 960px;
	margin: 20px auto 10px;
	font-size: 12px;
	color: #9bd1dc;
	text-align: right;
}

#footer a {
	text-decoration: none;
	color: #9bd1dc;
}

#footer a:hover {
	color: #586c78;
	text-shadow: #fff 0 1px 0;
}

#footer a img {
	vertical-align: -5px;
}

#colophon p, #colophon ul {
	font-size: 0.8em;
}

#colophon ul {
	margin-left: 2em;
}

#not_found {
	margin-top: 50px;
	font-size: 1.2em;
}

#not_found h3 {
	width: 100%;
	height: 310px;
	text-indent: -9999px;
	background: url(../img/404.png) no-repeat center center;
}

/*#static {
    padding: 20px;
}

#static h2 {
	font-weight: normal;
	color: #157DBC;
	text-shadow: #fff 0 1px 0;
	font-size: 32px;
	margin-bottom: 5px;
}

#static p {
    font-weight: normal;
    color: #157DBC;
    font-size: 19px;
}*/

#navigation {
    margin: 0 auto;
    width: 960px;
    margin-bottom: 25px;
}
#navigation ul {
    list-style-type: none;
}
#navigation ul li {
    float: left;
}
#navigation a {
    padding: 0px 25px;
    color: #586C78;
    text-decoration: none;
    font-size: 1.1em;
    text-shadow: #fff 0 1px 0;
}
#navigation a.active {
    font-size: 1.6em;
}
.blog-post {
    margin-bottom:1.2em;
}
.blog-date {
    float:right;
    font-size:0.9em;
}
.blog-more {
    float:right;
}
.blog-tags {
    font-size:0.9em;
    font-style: italic;
}
.clear {
    clear: both;
}
.blog-detail .blog-more { display: none; }

.tags span.tags-1 { font-size: 10px; }
.tags span.tags-2 { font-size: 12px; }
.tags span.tags-3 { font-size: 14px; }
.tags span.tags-4 { font-size: 16px; }
.tags span.tags-5 { font-size: 18px; }
.tags span.tags-6 { font-size: 22px; }
ul.resources {
    margin-left: 1em;
}
ul.resources li {
    line-height: 1em;
    margin-bottom: 0.4em;
}
ul.resources li span.caption {
    font-size: 0.8em;
}

